@@ -28,12 +28,11 @@ Photologue works with Python 3 (3.3 or later).
 
 Dependencies
 ------------
-4 apps that will be installed automatically if required.
+3 apps that will be installed automatically if required.
 
 * `Django <https://www.djangoproject.com/>`_.
 * `Pillow <http://python-imaging.github.io/Pillow/>`_.
 * `Django-sortedm2m <https://pypi.python.org/pypi/django-sortedm2m>`_.
-* `Django-model-utils <https://pypi.python.org/pypi/django-model-utils>`_.
 
 And 1 dependency that you will have to manage yourself:
 
