@@ -15,6 +15,8 @@ Changelog
   and have now been removed.
 - Tagging has been removed from Photologue.
 - All references to 'title_slug' field have been removed.
+- Django can now natively chain custom manager filters - so the dependency on django-model-utils
+  is removed.
 - Updated German translation.
 
 3.1.1 (2014-11-13)
